// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox/> should render checkbox with default props 1`] = `
<div>
  <label
    class="sc-bdfBwQ iTTCiC"
    tabindex="0"
  >
    <span
      class="sc-dlfnbm gspxga"
    >
      <svg
        fill="none"
        height="8"
        opacity="0"
        viewBox="0 0 11 8"
        width="11"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.28033 3.94163C0.987437 3.64874 0.512563 3.64874 0.21967 3.94163C-0.0732233 4.23452 -0.0732233 4.7094 0.21967 5.00229L2.94202 7.72464C3.23491 8.01754 3.70979 8.01754 4.00268 7.72464L10.447 1.28033C10.7399 0.987437 10.7399 0.512563 10.447 0.21967C10.1541 -0.0732233 9.67923 -0.0732233 9.38634 0.21967L3.47235 6.13365L1.28033 3.94163Z"
          fill="white"
        />
      </svg>
    </span>
    <input
      data-testid="checkbox"
      name="1"
      type="checkbox"
      value="John Doe"
    />
    <span
      class="sc-gsTCUz hTKKtX"
    >
      Name
    </span>
  </label>
</div>
`;

exports[`<Checkbox/> should render checkbox with external prop values 1`] = `
<div>
  <label
    class="sc-bdfBwQ iTTCiC"
    tabindex="1"
  >
    <span
      class="sc-dlfnbm cyOWeF"
    >
      <svg
        fill="none"
        height="8"
        opacity="0"
        viewBox="0 0 11 8"
        width="11"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.28033 3.94163C0.987437 3.64874 0.512563 3.64874 0.21967 3.94163C-0.0732233 4.23452 -0.0732233 4.7094 0.21967 5.00229L2.94202 7.72464C3.23491 8.01754 3.70979 8.01754 4.00268 7.72464L10.447 1.28033C10.7399 0.987437 10.7399 0.512563 10.447 0.21967C10.1541 -0.0732233 9.67923 -0.0732233 9.38634 0.21967L3.47235 6.13365L1.28033 3.94163Z"
          fill="white"
        />
      </svg>
    </span>
    <input
      data-testid="checkbox"
      name="name"
      type="checkbox"
      value="John Doe"
    />
    <span
      class="sc-gsTCUz hTKKtX"
    >
      Name
    </span>
  </label>
</div>
`;

exports[`<Checkbox/> should render checkbox with external prop values 2`] = `
<div>
  <label
    class="sc-bdfBwQ iTTCiC"
    tabindex="1"
  >
    <span
      class="sc-dlfnbm gspxga"
    >
      <svg
        fill="none"
        height="8"
        opacity="0"
        viewBox="0 0 11 8"
        width="11"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.28033 3.94163C0.987437 3.64874 0.512563 3.64874 0.21967 3.94163C-0.0732233 4.23452 -0.0732233 4.7094 0.21967 5.00229L2.94202 7.72464C3.23491 8.01754 3.70979 8.01754 4.00268 7.72464L10.447 1.28033C10.7399 0.987437 10.7399 0.512563 10.447 0.21967C10.1541 -0.0732233 9.67923 -0.0732233 9.38634 0.21967L3.47235 6.13365L1.28033 3.94163Z"
          fill="white"
        />
      </svg>
    </span>
    <input
      data-testid="checkbox"
      name="name"
      type="checkbox"
      value="John Doe"
    />
    <span
      class="sc-gsTCUz hTKKtX"
    >
      Name
    </span>
  </label>
</div>
`;

exports[`<Checkbox/> should render disabled checkbox 1`] = `
<div>
  <label
    class="sc-bdfBwQ dHzmZK"
    disabled=""
    tabindex="0"
  >
    <span
      class="sc-dlfnbm cyOWeF"
    >
      <svg
        fill="none"
        height="8"
        opacity="0"
        viewBox="0 0 11 8"
        width="11"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.28033 3.94163C0.987437 3.64874 0.512563 3.64874 0.21967 3.94163C-0.0732233 4.23452 -0.0732233 4.7094 0.21967 5.00229L2.94202 7.72464C3.23491 8.01754 3.70979 8.01754 4.00268 7.72464L10.447 1.28033C10.7399 0.987437 10.7399 0.512563 10.447 0.21967C10.1541 -0.0732233 9.67923 -0.0732233 9.38634 0.21967L3.47235 6.13365L1.28033 3.94163Z"
          fill="white"
        />
      </svg>
    </span>
    <input
      checked=""
      data-testid="checkbox"
      name="name"
      type="checkbox"
      value="John Doe"
    />
    <span
      class="sc-gsTCUz hTKKtX"
    >
      Name
    </span>
  </label>
</div>
`;
